@@ -13,21 +13,17 @@
  */
 package org.snakeyaml.engine.v2.api.types;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
-
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.snakeyaml.engine.v2.api.Dump;
-import org.snakeyaml.engine.v2.api.DumpSettings;
-import org.snakeyaml.engine.v2.api.Load;
-import org.snakeyaml.engine.v2.api.LoadSettings;
 import org.snakeyaml.engine.v2.nodes.Node;
-import org.snakeyaml.engine.v2.representer.StandardRepresenter;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.snakeyaml.engine.util.TestUtil.DEFAULT_DUMP;
+import static org.snakeyaml.engine.util.TestUtil.DEFAULT_LOAD;
+import static org.snakeyaml.engine.util.TestUtil.DEFAULT_REPRESENTER;
 
 @org.junit.jupiter.api.Tag("fast")
 class OptionalTest {
@@ -35,52 +31,42 @@ class OptionalTest {
     @Test
     @DisplayName("Represent Optional as value")
     void representOptional() {
-        var standardRepresenter = new StandardRepresenter(DumpSettings.builder().build());
-        Node node = standardRepresenter.represent("a");
+        Node node = DEFAULT_REPRESENTER.represent(Optional.of("a"));
         assertEquals("tag:yaml.org,2002:java.util.Optional", node.getTag().getValue());
     }
 
     @Test
     @DisplayName("Represent Optional.empty as null")
     void representEmptyOptional() {
-        var standardRepresenter = new StandardRepresenter(DumpSettings.builder().build());
-        Node node = standardRepresenter.represent(null);
+        Node node = DEFAULT_REPRESENTER.represent(Optional.empty());
         assertEquals("tag:yaml.org,2002:null", node.getTag().getValue());
     }
 
     @Test
     @DisplayName("Dump Optional as its value")
     void dumpOptional() {
-        var settings = DumpSettings.builder().build();
-        var dump = new Dump(settings);
-        String str = dump.dumpToString("a");
+        String str = DEFAULT_DUMP.dumpToString(Optional.of("a"));
         assertEquals("!!java.util.Optional 'a'\n", str);
     }
 
     @Test
     @DisplayName("Dump empty Optional as null")
     void dumpEmptyOptional() {
-        var settings = DumpSettings.builder().build();
-        var dump = new Dump(settings);
-        String str = dump.dumpToString(null);
+        String str = DEFAULT_DUMP.dumpToString(Optional.empty());
         assertEquals("null\n", str);
     }
 
     @Test
     @DisplayName("Dump Optionals")
     void dumpListOfOptional() {
-        var settings = DumpSettings.builder().build();
-        var dump = new Dump(settings);
-        String str = dump.dumpToString(Arrays.asList(Optional.of(2), null, Optional.of("a")));
+        String str = DEFAULT_DUMP.dumpToString(List.of(Optional.of(2), Optional.empty(), Optional.of("a")));
         assertEquals("[!!java.util.Optional '2', null, !!java.util.Optional 'a']\n", str);
     }
 
     @Test
     @DisplayName("Dump Optionals")
     void dumpListOfOptional2() {
-        var settings = DumpSettings.builder().build();
-        var dump = new Dump(settings);
-        String str = dump.dumpToString(Optional.of(List.of(1, 2)));
+        String str = DEFAULT_DUMP.dumpToString(Optional.of(List.of(1, 2)));
         assertEquals("!!java.util.Optional [1, 2]\n", str);
     }
 
@@ -88,27 +74,21 @@ class OptionalTest {
     @Test
     @DisplayName("Optional 'a' is parsed")
     void parseOptional() {
-        var settings = LoadSettings.builder().build();
-        var load = new Load(settings);
-        var str = (Optional<String>) load.loadFromString("!!java.util.Optional a");
+        var str = (Optional<String>) DEFAULT_LOAD.loadFromString("!!java.util.Optional a");
         assertEquals(Optional.of("a"), str);
     }
 
     @Test
     @DisplayName("Empty Optional parsed")
     void parseEmptyOptional() {
-        var settings = LoadSettings.builder().build();
-        var load = new Load(settings);
-        var str = (Optional<String>) load.loadFromString("!!java.util.Optional null");
-        assertNull(str);
+        var str = (Optional<String>) DEFAULT_LOAD.loadFromString("!!java.util.Optional null");
+        assertEquals(Optional.empty(), str);
     }
 
     @Test
     @DisplayName("Empty Optional parsed")
     void parseEmptyOptional2() {
-        var settings = LoadSettings.builder().build();
-        var load = new Load(settings);
-        var str = (Optional<String>) load.loadFromString("!!java.util.Optional ");
-        assertNull(str);
+        var str = (Optional<String>) DEFAULT_LOAD.loadFromString("!!java.util.Optional ");
+        assertEquals(Optional.empty(), str);
     }
 }
